--- a/style.css
+++ b/style.css
@@ -23,11 +23,17 @@ ul {
 }
 
 .section-welcome {
-  width: 80%;
-  margin: 30px auto;
+  padding: 50px 0;
   text-align: center;
 }
 
 .heading-1 {
   font-size: 50px;
+  color: aqua;
+  box-shadow: 0 10px 5px 2px rgba(0,0,0,0.3);
+}
+
+.paragraph {
+  max-width: 480px;
+  margin: 20px auto;
 }
